--- a/profile.html
+++ b/profile.html
@@ -2,12 +2,74 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Profile</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Perfil Usuario</title>
+    <link rel="stylesheet" 	href="css/stylesprofile.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <div class="perfil">
-      <img src="" alt="">
+
+    <div class="container">
+
+
+<header class="main-header">
+      <div class="row">
+        <div class="col-8">
+          <img class="iso" src="images/wander-iso.png" alt="wander isotype"/>
+          <img class="logo" src="images/wander-logo.png" alt="wander logotype"/>
+        </div>
+        <div class="col-2">
+          <a href="#" class="register-link">Registrarme</a>
+        </div>
+        <div class="col-2">
+          <a href="#" class="login-button">Inicio</a>
+        </div>
+      </div>
+    </header>
+</div>
+  
+
+      <!-- Perfil Usuario -->
+      <div class="container">
+      <div class="row">
+<!--columna 1-->
+        <div class="col-12 col-md-6">
+          <article class="perfil">
+              <img src="images/foto-perfil.jpg" alt="foto de Perfil" class="fotoPerfil">
+
+              <p> Nombre y Apellido</p>
+              <p> País de Origen</p>
+              <p> País de Residencia</p>
+              <p> Idiomas</p>
+              <a href="#Editar" class="editar-perfil"> Editar Perfil </a>
+
+          </article>
+
+        </div>
+<!--/columna 1-->
+
+<!--columna 2-->
+      <div class="col-12 col-md-6">
+        <h3> Perfil de Viajero
+        </h3>
+        <span class="Ciudades">Ciudades</span>
+        <span class= "Eventos">Eventos</span>
+        <span class="Conexiones">Conexiones</span>
+        <br>
+        <h4> Rating</h4>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+      </div>
+      <!--/columna 2-->
+      </div>
+
+
 
     </div>
+
+      <!-- /Perfil Usuario -->
   </body>
 </html>
