actualizaciones de wander_index.html

--- a/wander_index.html
+++ b/wander_index.html
@@ -1,4 +1,4 @@
-<!	DOCTYPE html>
+<! DOCTYPE html>
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
@@ -24,9 +24,9 @@
 			</div>
 		</header>
 		<!-- /main-header -->
-		
+
 		<!-- carousel -->
-		<div class="container">
+		<div class="container-fluid">
 			<section class="carousel">
 				<br>
 				<br>
@@ -39,7 +39,7 @@
 			</section>
 		</div>
 		<!-- /carousel -->
-		
+
 		<!-- search bar -->
 		<section class="search-bar">
 			<h3>Busqueda por destino</h3>
@@ -56,9 +56,9 @@
 			</form>
 		</section>
 		<!-- /search bar -->
-		
+
 		<!-- featured events -->
-		<div class="container">	
+		<div class="container-fluid">
 			<section class="featured-events">
 				<div class="row">
 					<div class="col-12 col-md-6">
@@ -66,23 +66,27 @@
 						<span class="tile-label">Tomorrowland</span>
 					</div>
 					<div class="col-6 col-md-3">
-						<div class="col-12">
-							<img class="tile-image" src="images/holi-festival.jpg" alt="holi festival">
-							<span class="tile-label">Holi Festival</span>
+						<div class="row">
+							<div class="col-12">
+								<img class="tile-image" src="images/holi-festival.jpg" alt="holi festival">
+								<span class="tile-label">Holi Festival</span>
+							</div>
+							<div class="col-12">
+								<img class="tile-image" src="images/aurora-borealis.jpg" alt="aurora borealis">
+								<span class="tile-label">Aurora Boreal</span>
+							</div>
 						</div>
-						<div class="col-12">
-							<img class="tile-image" src="images/aurora-borealis.jpg" alt="aurora borealis">
-							<span class="tile-label">Aurora Boreal</span>
-						</div>
-						</div>
+					</div>
 					<div class="col-6 col-md-3">
-						<div class="col-12">
-							<img class="tile-image" src="images/holi-festival.jpg" alt="holi festival">
-							<span class="tile-label">Holi Festival</span>
-						</div>
-						<div class="col-12">
-							<img class="tile-image" src="images/aurora-borealis.jpg" alt="aurora borealis">
-							<span class="tile-label">Aurora Boreal</span>
+						<div class="row">
+							<div class="col-12">
+								<img class="tile-image" src="images/holi-festival.jpg" alt="holi festival">
+								<span class="tile-label">Holi Festival</span>
+							</div>
+							<div class="col-12">
+								<img class="tile-image" src="images/aurora-borealis.jpg" alt="aurora borealis">
+								<span class="tile-label">Aurora Boreal</span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -105,9 +109,9 @@
 					</div>
 				</div>
 			</section>
-		</div>	
+		</div>
 		<!-- /featured events -->
-		
+
 		<!-- main footer -->
 		<footer class="main-footer">
 			<img src="images/skyline-banner.png" alt="skyline banner">
