--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@
       </div>
     </header>
 </div>
-  
+
 
       <!-- Perfil Usuario -->
       <div class="container">
@@ -36,11 +36,14 @@
         <div class="col-12 col-md-6">
           <article class="perfil">
               <img src="images/foto-perfil.jpg" alt="foto de Perfil" class="fotoPerfil">
-
               <p> Nombre y Apellido</p>
               <p> País de Origen</p>
               <p> País de Residencia</p>
               <p> Idiomas</p>
+              <br>
+              <br>
+
+
               <a href="#Editar" class="editar-perfil"> Editar Perfil </a>
 
           </article>
@@ -50,11 +53,20 @@
 
 <!--columna 2-->
       <div class="col-12 col-md-6">
-        <h3> Perfil de Viajero
-        </h3>
-        <span class="Ciudades">Ciudades</span>
+        <h3> Perfil de Viajero</h3>
+
+      <!--/   <img src="images/ciudades.png" alt="ciudades">
+        <img src="images/calendar.png" alt="eventos">
+        <img src="images/conexiones.png" alt="conexiones">-->
+       <span class="Ciudades">Ciudades</span>
         <span class= "Eventos">Eventos</span>
         <span class="Conexiones">Conexiones</span>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <h4> Rating</h4>
         <span class="fa fa-star checked"></span>
@@ -62,14 +74,111 @@
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
+
       </div>
+
       <!--/columna 2-->
       </div>
-
-
+<br>
+<br>
+<hr class="special-hr">
 
     </div>
 
+
       <!-- /Perfil Usuario -->
+
+
+      <div class="container">
+        <div class="row">
+          <!-- Eventos -->
+          <div class="col-12 col-md-7">
+
+  <h3> Eventos </h3>
+
+      <h2>2019</h2>
+      <p>Lorem ipsum..</p>
+
+
+      <h2>2018</h2>
+      <p>Lorem ipsum..</p>
+<br><br><br><br><br><br><br><br>
+
+</div>
+
+
+          <div class="col-12 col-md-5">
+            <h3> Grupos </h3>
+            <ul>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+            </ul>
+
+
+
+          </div>
+
+
+      </div>
+      <!--/Eventos-->
+<hr class="special-hr">
+      <!--Intereses -->
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h3>Intereses</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+
+        </div>
+
+      </div>
+      <!-- main footer -->
+      <footer class="main-footer">
+        <img src="images/skyline-banner.png" alt="skyline banner">
+        <div class="row">
+          <div class="col-12 col-md-4">
+            <ul class="footer-list">
+              <li><a href="#">Quiénes somos</a></li>
+              <li><a href="#">Contacto</a></li>
+              <li><a href="#">Trabaje con nosotros</a></li>
+              <br>
+              <br>
+            </ul>
+          </div>
+          <div class="col-12 col-md-4">
+            <ul class="footer-list">
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">Mi perfil</a></li>
+              <li><a href="#">Preguntas frecuentes</a></li>
+              <br>
+              <br>
+            </ul>
+          </div>
+          <div class="col-12 col-md-4">
+            <ul class="footer-list">
+              <li><a href="#">Eventos</a></li>
+              <li><a href="#">Destinos</a></li>
+              <br>
+              <br>
+              <br>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-8 copyright">
+            <img class="iso" src="images/wander-iso.png" alt="wander isotype"/>
+            <p>© derechos reservados</p>
+          </div>
+          <div class="col-4 social-links">
+            <a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
+          </div>
+        </div>
+      </footer>
+      <!-- /main footer -->
   </body>
 </html>
