--- a/profile.html
+++ b/profile.html
@@ -53,7 +53,7 @@
 
 <!--columna 2-->
       <div class="col-12 col-md-6">
-        <h3> Perfil de Viajero</h3>
+        <h2> Perfil de Viajero</h2>
 
       <!--/   <img src="images/ciudades.png" alt="ciudades">
         <img src="images/calendar.png" alt="eventos">
@@ -73,7 +73,7 @@
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star "></span>
 
       </div>
 
@@ -94,7 +94,7 @@
           <!-- Eventos -->
           <div class="col-12 col-md-7">
 
-  <h3> Eventos </h3>
+  <h2> Eventos </h2>
 
       <h2>2019</h2>
       <p>Lorem ipsum..</p>
@@ -108,7 +108,7 @@
 
 
           <div class="col-12 col-md-5">
-            <h3> Grupos </h3>
+            <h2> Grupos </h2>
             <ul>
               <li>Lorem</li>
               <li>Lorem</li>
@@ -128,7 +128,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h3>Intereses</h3>
+            <h2>Intereses</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
 
