--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <div class="container">
+    <div class="container-fluid">
 
 
 <header class="main-header">
@@ -22,7 +22,7 @@
           <a href="#" class="register-link">Registrarme</a>
         </div>
         <div class="col-2">
-          <a href="#" class="login-button">Inicio</a>
+          <a href="wander_index.html" class="login-button">Inicio</a>
         </div>
       </div>
     </header>
@@ -30,7 +30,7 @@
 
 
       <!-- Perfil Usuario -->
-      <div class="container">
+      <div class="container-fluid">
       <div class="row">
 <!--columna 1-->
         <div class="col-12 col-md-6">
@@ -89,7 +89,7 @@
       <!-- /Perfil Usuario -->
 
 
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <!-- Eventos -->
           <div class="col-12 col-md-7">
@@ -125,7 +125,7 @@
       <!--/Eventos-->
 <hr class="special-hr">
       <!--Intereses -->
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-12">
             <h2>Intereses</h2>
