actualización links perfil

--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
           <img class="logo" src="images/wander-logo.png" alt="wander logotype"/>
         </div>
         <div class="col-2">
-          <a href="#" class="register-link">Registrarme</a>
+          <a href="registro_login.html" class="register-link">Registrarme</a>
         </div>
         <div class="col-2">
           <a href="wander_index.html" class="login-button">Inicio</a>
@@ -53,7 +53,7 @@
 
 <!--columna 2-->
       <div class="col-12 col-md-6">
-        <h2> Perfil de Viajero</h2>
+        <h1 class="tituloEventos"> Perfil de Viajero</h1>
 
       <!--/   <img src="images/ciudades.png" alt="ciudades">
         <img src="images/calendar.png" alt="eventos">
@@ -94,7 +94,7 @@
           <!-- Eventos -->
           <div class="col-12 col-md-7">
 
-  <h2> Eventos </h2>
+  <h1 class="tituloEventos"> Eventos </h1>
 
       <h2>2019</h2>
       <p>Lorem ipsum..</p>
@@ -108,7 +108,7 @@
 
 
           <div class="col-12 col-md-5">
-            <h2> Grupos </h2>
+            <h1 class="tituloEventos"> Grupos </h1>
             <ul>
               <li>Lorem</li>
               <li>Lorem</li>
@@ -152,7 +152,7 @@
             <ul class="footer-list">
               <li><a href="#">Inicio</a></li>
               <li><a href="#">Mi perfil</a></li>
-              <li><a href="#">Preguntas frecuentes</a></li>
+              <li><a href="faq_wander.html">Preguntas frecuentes</a></li>
               <br>
               <br>
             </ul>
