No me cierra la grilla, lo unico nuevo son los links de las otras pag y el display

--- a/faq_wander.html
+++ b/faq_wander.html
@@ -16,16 +16,42 @@
 					<img class="logo" src="images/wander-logo.png" alt="wander logotype"/>
 				</div>
 				<div class="col-2">
-					<a href="#" class="register-link">Registrarme</a>
+					<a href="registro_login.html" class="register-link">Registrarme</a>
 				</div>
 				<div class="col-2">
-					<a href="#" class="login-button">Inicio</a>
+					<a href="wander_index.html" class="login-button">Inicio</a>
 				</div>
 			</div>
 		</header>
 		<!-- /main-header -->
 
 		<!-- /accordion -->
+		<div class="container">
+			<div class="row">
+				<div class=="col-12 col-md-4">
+					<ul class="accordion-list">
+						<h2>Preguntas Frecuentes</h2>
+						<hr>
+						<hr>
+					  <br>
+						<li> <a href="#">¿Puedo ver el contenido de eventos y recomendados sin ser miembro?</a></li>
+						<li><a href="#">¿Como me hago miembro de la comunidad?</a></li>
+						<li><a href="#">¿Es Gratis Wander?</a></li>
+						<li><a href="#">¿Como creo mi Usuario y Contraseña?</a></li>
+						<li><a href="#">¿Como recupero mi Usuario y Contraseña?</a></li>
+						<li><a href="#">¿como envio una solicitud de amistad?</a></li>
+						<li><a href="#">¿Como Bloqueo y Desbloqueo Amigos?</a></li>
+						<li><a href="#">¿Como creo "mi Proximo Viaje"?</a></li>
+						<li><a href="#">¿Como sumo a miembros de la comunidad a "mi proximo viaje"?</a></li>
+						<br>
+						<hr>
+						<hr>
+						<br>
+						<br>
+					</ul>
+        </div>
+
+			<div class=="col-12 col-md-8">
     <div class="accordion" id="accordion">
       <div class="card">
         <div class="card-header" id="headingOne">
@@ -37,7 +63,7 @@
         </div>
 
         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-          <div class="card-body">
+          <div class="card-body-one">
             Lorem ipsum dolor sit amet, mmodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </div>
         </div>
@@ -51,7 +77,7 @@
           </h2>
         </div>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-          <div class="card-body">
+          <div class="card-body-Two">
             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
           </div>
         </div>
@@ -88,7 +114,7 @@
         <div class="card-header" id="headingFive">
           <h2 class="mb-0">
             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-              Gestion de Cuenta - ¿ Como recupero mi Usuario y Contraseña?
+              Gestion de Cuenta - ¿Como recupero mi Usuario y Contraseña?
             </button>
           </h2>
         </div>
@@ -102,7 +128,7 @@
         <div class="card-header" id="headingSix">
           <h2 class="mb-0">
             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-              Comunidad - ¿Como me hago un nuevo amigo?
+              Comunidad - ¿como envio una solicitud de amistad?
             </button>
           </h2>
         </div>
@@ -155,9 +181,14 @@
         </div>
       </div>
 
+		</div>
+	</div>
+</div>
+
 		<!-- /accordion -->
 
 		<!-- main footer -->
+
 		<footer class="main-footer">
 			<img src="images/skyline-banner.png" alt="skyline banner">
 			<div class="row">
@@ -172,9 +203,9 @@
 				</div>
 				<div class="col-12 col-md-4">
 					<ul class="footer-list">
-						<li><a href="#">Inicio</a></li>
+						<li><a href="wander_index.html">Inicio</a></li>
 						<li><a href="#">Mi perfil</a></li>
-						<li><a href="#">Preguntas frecuentes</a></li>
+						<li><a href="faq_wander.html">Preguntas frecuentes</a></li>
 						<br>
 						<br>
 					</ul>
