agregue una img, modifique el faq.html.css, agregue el texto de quienes somos en el index y lo subi aparte en un word

--- a/faq_wander.html
+++ b/faq_wander.html
@@ -30,24 +30,30 @@
 			<div class="row">
 				<div class=="col-12 col-md-4">
 					<ul class="accordion-list">
-						<h2>Preguntas Frecuentes</h2>
+						<br>
+						<br>
+						<h1>Preguntas Frecuentes</h1>
 						<hr>
+						<hr>
+						<br>
+            <li>Aquí encontraras todo lo necesario</li>
+						<li>para que tu única preocupación en</li>
+						<li>Wander sea tu próximo destino....</li>
+						<br>
+          	<hr>
 						<hr>
 					  <br>
-						<li> <a href="#">¿Puedo ver el contenido de eventos y recomendados sin ser miembro?</a></li>
-						<li><a href="#">¿Como me hago miembro de la comunidad?</a></li>
-						<li><a href="#">¿Es Gratis Wander?</a></li>
-						<li><a href="#">¿Como creo mi Usuario y Contraseña?</a></li>
-						<li><a href="#">¿Como recupero mi Usuario y Contraseña?</a></li>
-						<li><a href="#">¿como envio una solicitud de amistad?</a></li>
-						<li><a href="#">¿Como Bloqueo y Desbloqueo Amigos?</a></li>
-						<li><a href="#">¿Como creo "mi Proximo Viaje"?</a></li>
-						<li><a href="#">¿Como sumo a miembros de la comunidad a "mi proximo viaje"?</a></li>
+						<li> <a href="#">Eventos</a></li>
+						<li><a href="#">Privacidad</a></li>
+						<li><a href="#">Perfil</a></li>
+						<li><a href="#">Amigos</a></li>
+						<li><a href="#">Comunidad y +</a></li>
+						<hr>
+						<hr>
+						<img class="faq-image" src="images/frase-viajero.jpg" alt="tomorrowland">
 						<br>
 						<hr>
 						<hr>
-						<br>
-						<br>
 					</ul>
         </div>
 
