--- a/wander_index.html
+++ b/wander_index.html
@@ -32,7 +32,16 @@
 				<br>
 				<br>
 				<h1>not all who wander are lost...</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p> Wander es un creador de historias.
+					<br>
+					<br>
+					Historias que conectan, que contagian, que se cuentan a través anécdotas de nuevas aventuras.
+					<br>
+					<br>
+					Esta plataforma te ayudara a encontrar tu próximo destino, cuando y como disfrutarlo.Y a través de nuestra red social podrás recibir consejos, dar referencias y con “mi comunidad Wander” encontraras tu próximo compañero de aventuras.
+          <br>
+					<br>
+				 ¡Pero la próxima historia la contas vos!</p>
 				<br>
 				<br>
 				<br
