--- a/faq_wander.html
+++ b/faq_wander.html
@@ -28,7 +28,7 @@
 		<!-- /accordion -->
 		<div class="container">
 			<div class="row">
-				<div class=="col-12 col-md-4">
+				<div class="col-12 col-md-4">
 					<ul class="accordion-list">
 						<br>
 						<br>
@@ -57,7 +57,7 @@
 					</ul>
         </div>
 
-			<div class=="col-12 col-md-8">
+			<div class="col-12 col-md-8">
     <div class="accordion" id="accordion">
       <div class="card">
         <div class="card-header" id="headingOne">
