--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,8 @@
     <title>Perfil Usuario</title>
     <link rel="stylesheet" 	href="css/stylesprofile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
   </head>
   <body>
 
@@ -19,7 +21,7 @@
           <img class="logo" src="images/wander-logo.png" alt="wander logotype"/>
         </div>
         <div class="col-2">
-          <a href="registro_login.html" class="register-link">Registrarme</a>
+          <a href="form-registration.html" class="register-link">Registrarme</a>
         </div>
         <div class="col-2">
           <a href="wander_index.html" class="login-button">Inicio</a>
@@ -55,16 +57,32 @@
       <div class="col-12 col-md-6">
         <h1 class="tituloEventos"> Perfil de Viajero</h1>
 
-      <!--/   <img src="images/ciudades.png" alt="ciudades">
-        <img src="images/calendar.png" alt="eventos">
-        <img src="images/conexiones.png" alt="conexiones">-->
-       <span class="Ciudades">Ciudades</span>
+
+        <div class="container actividades">
+
+
+        <div class="row">
+          <div class="column">
+    <img src="images/ciudades.jpg" alt="ciudades" >
+    <span class= "label"> 24 <br> CIUDADES </span>
+  </div>
+  <div class="column">
+  <img src="images/calendar.png" alt="eventos" >
+    <span class= "label"> 14 <br> EVENTOS</span>
+  </div>
+  <div class="column">
+      <img src="images/conexiones.png" alt="conexiones">
+        <span class= "label"> 120 CONEXIONES</span>
+  </div>
+</div>
+</div>
+
+
+
+       <!--/ <span class="Ciudades">Ciudades</span>
         <span class= "Eventos">Eventos</span>
-        <span class="Conexiones">Conexiones</span>
-        <br>
-        <br>
-        <br>
-        <br>
+        <span class="Conexiones">Conexiones</span> -->
+                <br>
         <br>
         <br>
         <br>
@@ -89,25 +107,59 @@
       <!-- /Perfil Usuario -->
 
 
-      <div class="container-fluid">
+      <div class="container-fluid Evento">
         <div class="row">
           <!-- Eventos -->
-          <div class="col-12 col-md-7">
+          <div class="col-12 col-md-6">
 
-  <h1 class="tituloEventos"> Eventos </h1>
+  <h1 class="tituloEventos">Eventos</h1>
 
-      <h2>2019</h2>
-      <p>Lorem ipsum..</p>
+    <ul class="timeline">
+      <h3>2019</h3>
+      <li>
+        <div class="item">
+            <span> Abr
 
+            </span>
 
-      <h2>2018</h2>
-      <p>Lorem ipsum..</p>
-<br><br><br><br><br><br><br><br>
+      <div class="content">
+        <h3>Coachella</h3>
+        <p>lorem</p>
+          </div>
+        </div>
+        </li>
+        <li>
+          <div class="item">
+              <span> Mar
+
+              </span>
+
+        <div class="content">
+          <h3>Lorem</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+            </div>
+          </div>
+          </li>
+          <li>
+            <div class="item">
+                <span> Feb
+
+                </span>
+
+          <div class="content">
+            <h3>Lorem</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+            </div>
+            </li>
+    </ul>
+
+<br><br>
 
 </div>
 
 
-          <div class="col-12 col-md-5">
+          <div class="col-12 col-md-6">
             <h1 class="tituloEventos"> Grupos </h1>
             <ul>
               <li>Lorem</li>
@@ -128,57 +180,58 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
-            <h2>Intereses</h2>
+            <h1 class="tituloEventos">Intereses</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
 
         </div>
 
       </div>
+
       <!-- main footer -->
-      <footer class="main-footer">
-        <img src="images/skyline-banner.png" alt="skyline banner">
-        <div class="row">
-          <div class="col-12 col-md-4">
-            <ul class="footer-list">
-              <li><a href="#">Quiénes somos</a></li>
-              <li><a href="#">Contacto</a></li>
-              <li><a href="#">Trabaje con nosotros</a></li>
-              <br>
-              <br>
-            </ul>
-          </div>
-          <div class="col-12 col-md-4">
-            <ul class="footer-list">
-              <li><a href="#">Inicio</a></li>
-              <li><a href="#">Mi perfil</a></li>
-              <li><a href="faq_wander.html">Preguntas frecuentes</a></li>
-              <br>
-              <br>
-            </ul>
-          </div>
-          <div class="col-12 col-md-4">
-            <ul class="footer-list">
-              <li><a href="#">Eventos</a></li>
-              <li><a href="#">Destinos</a></li>
-              <br>
-              <br>
-              <br>
-            </ul>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-8 copyright">
-            <img class="iso" src="images/wander-iso.png" alt="wander isotype"/>
-            <p>© derechos reservados</p>
-          </div>
-          <div class="col-4 social-links">
-            <a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
-            <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-            <a href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
-          </div>
-        </div>
-      </footer>
-      <!-- /main footer -->
+  		<footer class="main-footer">
+  			<img src="images/skyline-banner.png" alt="skyline banner">
+  			<div class="row">
+  				<div class="col-12 col-md-4">
+  					<ul class="footer-list">
+  						<li><a href="#">Quiénes somos</a></li>
+  						<li><a href="#">Contacto</a></li>
+  						<li><a href="#">Trabaje con nosotros</a></li>
+  						<br>
+  						<br>
+  					</ul>
+  				</div>
+  				<div class="col-12 col-md-4">
+  					<ul class="footer-list">
+  						<li><a href="wander_index.html">Inicio</a></li>
+  						<li><a href="profile.html">Mi perfil</a></li>
+  						<li><a href="faq_wander.html">Preguntas frecuentes</a></li>
+  						<br>
+  						<br>
+  					</ul>
+  				</div>
+  				<div class="col-12 col-md-4">
+  					<ul class="footer-list">
+  						<li><a href="#">Eventos</a></li>
+  						<li><a href="#">Destinos</a></li>
+  						<br>
+  						<br>
+  						<br>
+  					</ul>
+  				</div>
+  			</div>
+  			<div class="row">
+  				<div class="col-8 copyright">
+  					<img class="iso" src="images/wander-iso.png" alt="wander isotype"/>
+  					<p>© derechos reservados</p>
+  				</div>
+  				<div class="col-4 social-links">
+  					<a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
+  					<a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+  					<a href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
+  				</div>
+  			</div>
+  		</footer>
+  		<!-- /main footer -->
   </body>
 </html>
